datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum DeploymentStatus {
  PENDING
  QUEUED
  IN_PROGRESS
  SUCCESS
  FAILED
}

model User {
  id        Int       @id @default(autoincrement())
  username  String    @unique
  email     String    @unique
  password  String
  role      String    @default("developer")
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  projects            Project[]
  deploymentHistories DeploymentHistory[]

  @@map("users")
}

model Project {
  id          Int     @id @default(autoincrement())
  name        String
  productLine String?
  slug        String  @unique
  description String?
  status      String  @default("pending")

  // Frontend URLs
  defaultFrontendUrl    String?  @unique
  customFrontendUrl     String?  @unique
  isDefaultFrontendActive Boolean @default(true)
  isCustomFrontendActive  Boolean @default(false)

  // Backend URLs
  defaultBackendUrl    String?
  customBackendUrl     String?
  isDefaultBackendActive Boolean @default(true)
  isCustomBackendActive  Boolean @default(false)

  // Monitoring URLs
  defaultMonitoringUrl    String?
  customMonitoringUrl     String?
  isDefaultMonitoringActive Boolean @default(false)
  isCustomMonitoringActive  Boolean @default(false)
  needMonitoringExposed     Boolean @default(false)

  // Listening ports
  frontendListeningPort Int @default(80)
  backendListeningPort  Int @default(7776)

  userId      Int
  projectType String @default("regular")
  envVars     Json?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  user                    User                     @relation(fields: [userId], references: [id])
  deploymentHistories     DeploymentHistory[]
  monitoringConfiguration MonitoringConfiguration?
  monitoringTokens       MonitoringToken[]

  @@map("projects")
}

model DeploymentHistory {
  id          Int              @id @default(autoincrement())
  projectId   Int
  userId      Int?
  status      DeploymentStatus @default(PENDING)
  version     String?
  environment String           @default("production")
  logs        String?
  startedAt   DateTime?
  finishedAt  DateTime?
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  deletedAt   DateTime?

  project Project @relation(fields: [projectId], references: [id])
  user    User?   @relation(fields: [userId], references: [id])

  @@map("deployment_histories")
}

model MonitoringConfiguration {
  id        Int      @id @default(autoincrement())
  projectId Int      @unique
  enabled   Boolean  @default(false)
  features  Json?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  project Project @relation(fields: [projectId], references: [id])

  @@map("monitoring_configurations")
}

model MonitoringToken {
  id        String   @id @default(uuid())
  projectId Int
  expiredAt DateTime
  createdAt DateTime @default(now())

  project Project @relation(fields: [projectId], references: [id])

  @@map("monitoring_tokens")
}
